<resources>
    <string name="app_name">博客</string>
    <string name="bt1">按钮1</string>
    <string name="menu_add">增加</string>
    <string name="menu_remove">删除</string>
    <string name="bt2">按钮2</string>
    <string name="login_error">账号或者密码错误</string>
    <string name="login_account">用户名</string>
    <string name="login_pass">密码</string>
    <string name="login_bt">登录</string>
    <string name="please_input">请输入</string>
    <string name="offline_bt">离线</string>
    <string name="offline_assert">离线确认</string>
    <string name="offline_assert_msg">被离线，请重新登录。</string>
    <string name="ok_bt">确定</string>
    <string name="expect_account">fujisann</string>
    <string name="expect_pass">123</string>
    <string name="download_bt">下载</string>
    <string name="pause_bt">暂停</string>
    <string name="cancel_bt">取消</string>
    <string name="continue_bt">继续</string>
    <string name="download_delete_bt">删除</string>
    <string name="toolbar_backup_bt">备份</string>
    <string name="toolbar_delete_bt">删除</string>
    <string name="toolbar_setting_bt">设置</string>
    <string name="draw_layout">侧边栏</string>
    <string name="nav_call">电话</string>
    <string name="nav_friend">朋友</string>
    <string name="nav_location">位置</string>
    <string name="nav_email">邮箱</string>
    <string name="nav_task">任务</string>
    <string name="nav_header_user">fujisannink</string>
    <string name="nav_header_email">fujisannink@gmail.com</string>
    <string name="weather_title">预报</string>
    <string name="weather_aqi_title">空气质量</string>
    <string name="weather_aqi_text">AQI 指数</string>
    <string name="weather_pm25_text">PM2.5 指数</string>
    <string name="weather_suggestion">生活建议</string>
</resources>
