<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--菜单只允许单选-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tel"
            android:icon="@drawable/ic_baseline_call_24"
            android:title="@string/nav_call" />

        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/nav_friend" />

        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/nav_location" />

        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_baseline_email_24"
            android:title="@string/nav_email" />

        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/nav_task" />
    </group>
</menu>