<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/login_account"
            android:hint="@string/please_input"
            android:textSize="25sp" />
        <EditText
            android:id="@+id/login_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:inputType="text"
            android:hint="@string/please_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="25sp"
            android:text="@string/login_pass"/>
        <EditText
            android:id="@+id/login_pass"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:inputType="textPassword"
            android:hint="@string/please_input" />
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_bt"
        android:textSize="28sp"
        android:padding="5dp"/>
</LinearLayout>